force-app/main/default/objects/Route_Profit_Margin__c/Route_Profit_Margin__c.object-meta.xml
<CustomObject>
    <label>Route Profit Margin</label>
    <nameField>
        <label>Route Profit Margin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Profit Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>