force-app/main/default/objects/Route_Profit_Margin__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Route Profit Margins</relationshipLabel>
    <relationshipName>Route_Profit_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>