force-app/main/default/objects/Route_Profit_Margin__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>