force-app/main/default/objects/Route_Profit_Margin__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Route Profit Margins</relationshipLabel>
    <relationshipName>Route_Profit_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>