force-app/main/default/objects/Route_Profit_Margin__c/fields/Port_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Route Profit Margins (Port of Discharge)</relationshipLabel>
    <relationshipName>Route_Profit_Margins_POD</relationshipName>
    <type>Lookup</type>
</CustomField>