force-app/main/default/objects/Route_Profit_Margin__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Route Profit Margins</relationshipLabel>
    <relationshipName>Route_Profit_Margins_POL</relationshipName>
    <type>Lookup</type>
</CustomField>