force-app/main/default/objects/Route_Profit_Margin__c/recordTypes/Customer_Port_Pair.recordType-meta.xml
<RecordType>
    <fullName>Customer_Port_Pair</fullName>
    <active>true</active>
    <label>Customer Port Pair</label>
</RecordType>