force-app/main/default/objects/Route_Profit_Margin__c/recordTypes/Port_Pair.recordType-meta.xml
<RecordType>
    <fullName>Port_Pair</fullName>
    <active>true</active>
    <label>Port Pair</label>
</RecordType>